ctxmap-tests/tests/compile_fail/with_immut_key_mut.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/with_immut_key_mut.rs:7:12
  |
7 |     m.with(&KEY_A, &10, |_| {});
  |            ^^^^^^ expected struct `ctxmap::Key`, found struct `KeyMut`
  |
  = note: expected reference `&'static ctxmap::Key<_, _>`
             found reference `&KeyMut<main::Schema, u8>`
